--- a/tables.html
+++ b/tables.html
@@ -62,34 +62,6 @@
                     </tr>
                   </tfoot>
                   <tbody id="entries">
-                    <script>
-                        var entry1 = {
-                          "name" : "Kevin Huang",
-                          "position" : "MATLAB Enthusiast",
-                          "department" : "Engineering Physics"
-                        }
-                        var entry2 = {
-                          "name" : "Tyler Lum",
-                          "position" : "Database Designer",
-                          "department" : "Engineering Physics"
-                        }
-                        var entries = [entry1,entry2];
-                        function htmlFromEntries(entries){
-                          var htmlout = '';
-                          for (var i = 0; i<entries.length; i++){
-                            htmlout += '<tr>\n';
-                            htmlout += '<td>'+entries[i].name+'</td>\n';
-                            htmlout += '<td>'+entries[i].position+'</td>\n';
-                            htmlout += '<td>'+entries[i].department+'</td>\n';
-                            htmlout += '</tr>\n';
-                          }
-                          return htmlout;
-                        }
-                        document.getElementById("entries").innerHTML = htmlFromEntries(entries);
-                    </script>
-                    <script>
-                    
-                    </script>
                   </tbody>
                 </table>
               </div>
@@ -129,6 +101,13 @@
 
   <!-- Page level custom scripts -->
   <script src="js/demo/datatables-demo.js"></script>
+
+  <!-- Custom scripts -->
+  <script src="database/entries.jsonp"></script>
+  <script src="database/database.js"></script>
+  <script>
+      document.getElementById("entries").innerHTML = htmlFromEntries(filterSkill(entries,["MATLAB ENTHUSIAST","JSON"]));
+  </script>
 
 </body>
 
