--- a/buttons copy.html
+++ b/buttons copy.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="css/sb-admin-2.css" rel="stylesheet">
 
 </head>
 
@@ -362,27 +362,32 @@
                   <div class="mb-2">
                     <code>App Development</code>
                   </div>
-                  <a href="#" class="btn btn-primary btn-circle">
-                    <i class="fab fa-facebook-messenger"></i>
+                  <a href="#" class="btn btn-circle btn-skills">
+                    <i class="fab fa-java"></i>
+                    <span class="btn-text">Java</span>
                   </a>
-                  <a href="#" class="btn btn-success btn-circle">
-                    <i class="fas fa-check"></i>
+                  <a href="#" class="btn btn-circle btn-skills">
+                    <i class="fas fa-js-square"></i>
+                    <span class="btn-text">Javascript</span>
                   </a>
-                  <a href="#" class="btn btn-info btn-circle">
+                  <a href="#" class="btn btn-circle btn-skills">
                     <i class="fas fa-info-circle"></i>
+                    <span class="btn-text">C#</span>
                   </a>
-                  <a href="#" class="btn btn-warning btn-circle">
+                  <a href="#" class="btn btn-circle btn-skills">
                     <i class="fas fa-exclamation-triangle"></i>
+                    <span class="btn-text">C++</span>
                   </a>
-                  <a href="#" class="btn btn-danger btn-circle">
+                  <a href="#" class="btn btn-circle btn-skills">
                     <i class="fas fa-trash"></i>
+                    <span class="btn-text">Python</span>
                   </a>
 
                   <!-- Circle Buttons (Large) -->
                   <div class="mt-4 mb-2">
                     <code>.btn-circle .btn-lg</code>
                   </div>
-                  <a href="#" class="btn btn-primary btn-circle btn-lg">
+                  <a href="#" class="btn btn-primary btn-circle btn-lg ">
                     <i class="fab fa-facebook-f"></i>
                   </a>
                   <a href="#" class="btn btn-success btn-circle btn-lg">
