Fixed broken css

--- a/0.html
+++ b/0.html
@@ -426,6 +426,13 @@
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
 
+  <script src="database/entries.jsonp"></script>
+  <script src="database/tags.jsonp"></script>
+  <script src="database/database.js">
+  var id = 0;
+  var entry = entryFromId(entries,id);
+  </script>
+
 </body>
 
 </html>
