Updated Sidebar, moved user profile to sidebar

--- a/buttons copy.html
+++ b/buttons copy.html
@@ -43,7 +43,7 @@
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
         <a class="nav-link" href="index.html">
-          <i class="fas fa-fw fa-tachometer-alt"></i>
+          <i class="fas fa-fw fa-homepage"></i>
           <span>Dashboard</span></a>
       </li>
 
@@ -86,14 +86,6 @@
           </div>
         </div>
       </li>
-
-      <!-- Divider -->
-      <hr class="sidebar-divider">
-
-      <!-- Heading -->
-      <div class="sidebar-heading">
-        Addons
-      </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
