Added Kevin's LinkedIn Picture

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
       <li class="nav-item dropdown no-arrow">
         <a class="nav-link dropdown-toggle" href="profile.html" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img class="img-profile rounded-circle" style="margin-left:1rem" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
-          <span style="margin:0 1rem; font-size:1rem">Joel Tecson</span>
+          <img class="img-profile rounded-circle" style="margin-left:1rem" src="img/kevin.jpg">
+          <span style="margin:0 1rem; font-size:1rem">Kevin Huang</span>
         </a>
       </li>
 
