--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
           <h1 class="h1 mb-0 text-white-50" align="Center">Who are you looking for?</h1> 
         <link rel="stylesheet" href="awecomplete/awesomplete.css" /> 
 <script src="awecomplete/awesomplete.js" async ></script>
-<input class="awesomplete" placeholder="Search for people by skills, job title, or department"
-      data-list="Ada, Java, JavaScript, Brainfuck, LOLCODE, Node.js, Ruby on Rails" />
+<input class="awesomplete" id="searchtags" placeholder="Search for people by skills, job title, or department"
+      data-list="" />
 
           <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
@@ -276,9 +276,11 @@
 
 <!-- Database scripts -->
 <script src="database/entries.jsonp"></script>
+<script src="database/tags.jsonp"></script>
 <script src="database/database.js"></script>
 <script>
-    var currenttags = ["MATLAB Enthusiast"];
+    document.getElementById("searchtags").setAttribute("data-list",listTags(tags)) ;
+    var currenttags = [];
     document.getElementById("entries").innerHTML = htmlFromEntries(filterSkill(entries,currenttags));
     document.getElementById("tagbuttons").innerHTML = htmlFromTags(currenttags);
     function updateTags(currenttags){
