Names are tags now
Implemented:
- Names as search tags
- Team instead of Department in UI
- New fake roles for everyone

--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
                       <tr>
                         <th>Name</th>
                         <th>Position</th>
-                        <th>Department</th>
+                        <th>Team</th>
                       </tr>
                     </thead>
                     <tfoot>
                       <tr>
                         <th>Name</th>
                         <th>Position</th>
-                        <th>Department</th>
+                        <th>Team</th>
                       </tr>
                     </tfoot>
                     <tbody id="entries">
