Added Best Buy Logo to Side Bar

--- a/0.html
+++ b/0.html
@@ -27,7 +27,7 @@
   <!-- Page Wrapper -->
   <div id="wrapper">
      <!-- Sidebar -->
-     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
@@ -71,7 +71,7 @@
         </div>
       </li>
 
-      <!-- Nav Item - Tables -->
+      <!-- Nav Item - Logout -->
       <li class="nav-item">
         <a class="nav-link" href="#" data-toggle="modal" data-target="#logoutModal">
           <i class="fas fa-sign-out-alt fa-fw"></i>
@@ -87,6 +87,9 @@
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
       </div>
 
+      <div class="text-center">
+        <img src="img/Best_Buy_Logo.svg" alt="Best_Buy_Logo" class="logo">
+      </div>
     </ul>
     <!-- End of Sidebar -->
     <!-- Content Wrapper -->
