--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       </li>
 
-      <!-- Nav Item - Tables -->
+      <!-- Nav Item - Logout -->
       <li class="nav-item">
         <a class="nav-link" href="#" data-toggle="modal" data-target="#logoutModal">
           <i class="fas fa-sign-out-alt fa-fw"></i>
@@ -86,6 +86,9 @@
         <button class="rounded-circle border-0" id="sidebarToggle"></button>
       </div>
 
+      <div class="text-center">
+        <img src="img/Best_Buy_Logo.svg" alt="Best_Buy_Logo" class="logo">
+      </div>
     </ul>
     <!-- End of Sidebar -->
 
@@ -104,7 +107,7 @@
           </button>
 
           <!-- Topbar Search -->
-          <h1 class="h1 mb-0 text-white-50" align="Center">Who are you looking for?</h1> 
+          <h1 class="h1 mb-0 text-white" align="Center">Who are you looking for?</h1> 
         <link rel="stylesheet" href="awecomplete/awesomplete.css" /> 
 <script src="awecomplete/awesomplete.js" async ></script>
 <input class="awesomplete" id="searchtags" placeholder="Search for people by skills, job title, or department"
