center thing, add high volume error message on 0html

--- a/0.html
+++ b/0.html
@@ -113,13 +113,16 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Profile</h6>
                 </div>
-                <img src="img/Charles.jpeg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
+                <img src="img/Charles.jpeg" alt="Charles" align="middle" class="w3-circle" vspace="20" style="width:300px;height:300px;">
                 <div class="card-body">
                   <h1 class="h3 mb-4 text-gray-800" align="center">Charles Qian</h1>
                   <h1 class="h3 mb-4 text-gray-800" align="center">Lead iOS Developer</h1>
                   <p>Hi! My name is Charles. I've worked at BestBuy for 10 years on projects such as BestBuy.com and the BestBuy iOS App. Feel free to send me a message on Slack.</p>
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
                   <a href="https://bizhackshackathon2019.slack.com/messages/UFTM3MUTU/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
+                  <p>
+                    <code style= "color: #DC143C;">*Charles has received a high volume of connections lately and may take a while to respond. For an employee with similar skills, we suggest: </code>
+                  </p>
 
                 </div>
               </div>
