--- a/1.html
+++ b/1.html
@@ -278,13 +278,13 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Profile</h6>
                 </div>
-                <img src="img/Charles.jpeg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
+                <img src="img/Joel.png" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
                 <div class="card-body">
-                  <h1 class="h3 mb-4 text-gray-800" align="center">Charles Qian</h1>
-                  <h1 class="h3 mb-4 text-gray-800" align="center">Lead iOS Developer</h1>
-                  <p>Hi! My name is Charles. I've worked at BestBuy for 10 years on projects such as BestBuy.com and the BestBuy iOS App. Feel free to send me a message on Slack.</p>
+                  <h1 class="h3 mb-4 text-gray-800" align="center">Joel Tecson</h1>
+                  <h1 class="h3 mb-4 text-gray-800" align="center">Product Marketing Manager</h1>
+                  <p>My name is Joel Tecson and I am one of the marketing managers here at Best Buy. My expertise revolves around implementing marketing strategies for selling our products. If you have any questions, feel free to message me on slack!  </p>
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
-                  <a href="https://bizhackshackathon2019.slack.com/messages/UFTM3MUTU/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
+                  <a href="https://bizhackshackathon2019.slack.com/messages/UFT3K068Z/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
 
                 </div>
               </div>
@@ -347,22 +347,23 @@
                     <span class="icon text-white-50">
                       <i class="fas fa-apple-alt"></i>
                     </span>
-                    <span class="text">Best Buy iOS App</span>
+                    <span class="text">Best Buy Reserve and Pick-Up Service</span>
                   </a>
-                  <p> I lead the Best Buy iOS Team and created the application from the ground-up in Swift. </p>
+                  <p> I supervised the team that implemented the reserve and pick-up system on the best buy website  </p>
                   <div class="my-2"></div>
                   <a href="#" class="btn btn-secondary btn-icon-split">
                     <span class="icon text-white-50">
                       <i class="fas fa-database"></i>
                     </span>
-                    <span class="text">Employee Database</span>
+                    <span class="text">Best Buy Mobile App</span>
                   </a>
+                  <p> I lead the team that worked on the implementation and functionality of the companie's mobile app  </p>
                   <div class="my-2"></div>
                   <a href="#" class="btn btn-secondary btn-icon-split">
                     <span class="icon text-white-50">
                       <i class="fas fa-laptop"></i>
                     </span>
-                    <span class="text">Bestbuy.com</span>
+                    <span class="text">Bestbuy.com web development</span>
                   </a>
                 </div>
               </div>
