--- a/0.html
+++ b/0.html
@@ -113,7 +113,7 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Profile</h6>
                 </div>
-                <img src="img/Charles.jpeg" alt="Charles" align="middle" class="w3-circle" vspace="20" style="width:300px;height:300px;">
+                <img src="img/Charles.jpeg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
                 <div class="card-body">
                   <h1 class="h3 mb-4 text-gray-800" align="center">Charles Qian</h1>
                   <h1 class="h3 mb-4 text-gray-800" align="center">Lead iOS Developer</h1>
