--- a/2.html
+++ b/2.html
@@ -278,13 +278,13 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Profile</h6>
                 </div>
-                <img src="img/Charles.jpeg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
+                <img src="img/Kevin.jpg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
                 <div class="card-body">
-                  <h1 class="h3 mb-4 text-gray-800" align="center">Charles Qian</h1>
-                  <h1 class="h3 mb-4 text-gray-800" align="center">Lead iOS Developer</h1>
-                  <p>Hi! My name is Charles. I've worked at BestBuy for 10 years on projects such as BestBuy.com and the BestBuy iOS App. Feel free to send me a message on Slack.</p>
+                  <h1 class="h3 mb-4 text-gray-800" align="center">Kevin Huang</h1>
+                  <h1 class="h3 mb-4 text-gray-800" align="center">Data Analyst</h1>
+                  <p>I have been working at Best Buy for just over a year. My job is to interpret data sources that come into the company, whether its business sales to customer satisfaction results and more. If you need any help with any statistical work, message me on slack! </p>
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
-                  <a href="https://bizhackshackathon2019.slack.com/messages/UFTM3MUTU/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
+                  <a href="https://bizhackshackathon2019.slack.com/messages/UFV41EKLN/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
 
                 </div>
               </div>
