Disambiguated search bar
Search bar no longer has commas for clarity

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <h1 class="h1 mb-0 text-white" align="Center">Who are you looking for?</h1> 
         <link rel="stylesheet" href="awecomplete/awesomplete.css" /> 
 <script src="awecomplete/awesomplete.js" async ></script>
-<input class="awesomplete" id="searchtags" placeholder="Search for people by skills, job title, or department"
+<input class="awesomplete" id="searchtags" placeholder="Search for people by skills/job title/team"
       data-list="" />
 
           <!-- Topbar Navbar -->
