--- a/0.html
+++ b/0.html
@@ -137,7 +137,8 @@
                 </div>
                 <div class="card-body">
                   <div class="mb-2">
-                    <code>Proficient in</code>
+                    <code style="font-weight:bold;color:#0092df">Proficient in</code>
+                    <code style="font-weight:bold;color:#003b64">(open to mentorship)</code>
                   </div>
                   <div class="mb-2" id="proficient"></div>
 
@@ -146,7 +147,7 @@
 
                   <!-- Circle Buttons (Large) -->
                   <div class="mb-2">
-                    <code>Interested in</code>
+                    <code style="font-weight:bold;color:#0092df">Interested in</code>
                   </div>
                   <div class="mb-2" id="interest"></div>
                 </div>
@@ -175,7 +176,7 @@
                     <span class="icon text-white-50">
                       <i class="fas fa-laptop"></i>
                     </span>
-                    <span class="text">Bestbuy.com</span>
+                    <span class="text">BestBuy.ca</span>
                   </a>
                 </div>
               </div>
@@ -236,8 +237,8 @@
   <script>
     var id = 0;
     var entry = entryFromId(entries,id);
-    document.getElementById("proficient").innerHTML = htmlSkills(entry.skills);
-    document.getElementById("interest").innerHTML = htmlSkills(entry.interests);
+    document.getElementById("proficient").innerHTML = htmlSkills(entry.skills,entry.mentor);
+    document.getElementById("interest").innerHTML = htmlSkills(entry.interests,entry.mentor);
   </script>
 
 </body>
