--- a/1.html
+++ b/1.html
@@ -132,18 +132,19 @@
                   <h6 class="m-0 font-weight-bold text-primary">Skills</h6>
                 </div>
                 <div class="card-body">
-                  <div class="mb-2">
-                    <code>Proficient in</code>
-                  </div>
-                  <div class="mb-2" id="proficient"></div>
-
-                  <!-- Divider -->
-                  <hr class="sidebar-divider">
-
-                  <!-- Circle Buttons (Large) -->
-                  <div class="mb-2">
-                    <code>Interested in</code>
-                  </div>
+                    <div class="mb-2">
+                      <code style="font-weight:bold;color:#0092df">Proficient in</code>
+                      <code style="font-weight:bold;color:#003b64">(open to mentorship)</code>
+                    </div>
+                    <div class="mb-2" id="proficient"></div>
+  
+                    <!-- Divider -->
+                    <hr class="sidebar-divider">
+  
+                    <!-- Circle Buttons (Large) -->
+                    <div class="mb-2">
+                      <code style="font-weight:bold;color:#0092df">Interested in</code>
+                    </div>
                   <div class="mb-2" id="interest"></div>
                 </div>
               </div>
@@ -164,7 +165,7 @@
                     <span class="icon text-white-50">
                       <i class="fas fa-database"></i>
                     </span>
-                    <span class="text">Best Buy Mobile App</span>
+                    <span class="text">Best Buy iOS App</span>
                   </a>
                   <p> I lead the team that worked on the implementation and functionality of the companie's mobile app  </p>
                   <div class="my-2"></div>
@@ -172,7 +173,7 @@
                     <span class="icon text-white-50">
                       <i class="fas fa-laptop"></i>
                     </span>
-                    <span class="text">Bestbuy.com web development</span>
+                    <span class="text">BestBuy.ca</span>
                   </a>
                 </div>
               </div>
@@ -232,8 +233,8 @@
   <script>
     var id = 1;
     var entry = entryFromId(entries,id);
-    document.getElementById("proficient").innerHTML = htmlSkills(entry.skills);
-    document.getElementById("interest").innerHTML = htmlSkills(entry.interests);
+    document.getElementById("proficient").innerHTML = htmlSkills(entry.skills,entry.mentor);
+    document.getElementById("interest").innerHTML = htmlSkills(entry.interests,entry.mentor);
   </script>
 
 </body>
