--- a/4.html
+++ b/4.html
@@ -130,20 +130,21 @@
                   <h6 class="m-0 font-weight-bold text-primary">Skills</h6>
                 </div>
                 <div class="card-body">
-                  <div class="mb-2">
-                    <code>Proficient in</code>
+                    <div class="mb-2">
+                      <code style="font-weight:bold;color:#0092df">Proficient in</code>
+                      <code style="font-weight:bold;color:#003b64">(open to mentorship)</code>
+                    </div>
+                    <div class="mb-2" id="proficient"></div>
+  
+                    <!-- Divider -->
+                    <hr class="sidebar-divider">
+  
+                    <!-- Circle Buttons (Large) -->
+                    <div class="mb-2">
+                      <code style="font-weight:bold;color:#0092df">Interested in</code>
+                    </div>
+                    <div class="mb-2" id="interest"></div>
                   </div>
-                  <div class="mb-2" id="proficient"></div>
-
-                  <!-- Divider -->
-                  <hr class="sidebar-divider">
-
-                  <!-- Circle Buttons (Large) -->
-                  <div class="mb-2">
-                    <code>Interested in</code>
-                  </div>
-                  <div class="mb-2" id="interest"></div>
-                </div>
               </div>
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
@@ -169,7 +170,7 @@
                     <span class="icon text-white-50">
                       <i class="fas fa-laptop"></i>
                     </span>
-                    <span class="text">Bestbuy.com</span>
+                    <span class="text">BestBuy.ca</span>
                   </a>
                 </div>
               </div>
@@ -229,8 +230,8 @@
   <script>
     var id = 4;
     var entry = entryFromId(entries,id);
-    document.getElementById("proficient").innerHTML = htmlSkills(entry.skills);
-    document.getElementById("interest").innerHTML = htmlSkills(entry.interests);
+    document.getElementById("proficient").innerHTML = htmlSkills(entry.skills,entry.mentor);
+    document.getElementById("interest").innerHTML = htmlSkills(entry.interests,entry.mentor);
   </script>
 
 </body>
