--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                         <th>Name</th>
                         <th>Position</th>
                         <th>Team</th>
+                        <th>Open to Mentoring in</th>
                       </tr>
                     </thead>
                     <tfoot>
@@ -162,6 +163,7 @@
                         <th>Name</th>
                         <th>Position</th>
                         <th>Team</th>
+                        <th>Open to Mentoring in</th>
                       </tr>
                     </tfoot>
                     <tbody id="entries">
