--- a/3.html
+++ b/3.html
@@ -9,12 +9,12 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Buttons</title>
+  <title>Discover - Alistair Yee</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.css" rel="stylesheet">
   <link rel="stylesheet" href="w3.css">
@@ -30,11 +30,10 @@
 
       <!-- Sidebar - Brand -->
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-        <div class="sidebar-brand-icon rotate-n-15">
-          <i class="fas fa-laugh-wink"></i>
-        </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</div>
-      </a>
+          <div class="sidebar-brand-icon rotate-n-15">
+          </div>
+          <div class="sidebar-brand-text mx-3" style="font-family: 'Montserrat', serif;font-size:xx-large">Discover</div>
+        </a>
 
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
