Fixed broken image

--- a/3.html
+++ b/3.html
@@ -109,7 +109,7 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Profile</h6>
                 </div>
-                <img src="img/Alistair.jpg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
+                <img src="img/Alistair.JPG" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
                 <div class="card-body">
                   <h1 class="h3 mb-4 text-gray-800" align="center">Alistair Yee</h1>
                   <h1 class="h3 mb-4 text-gray-800" align="center">Python Developer</h1>
