--- a/2.html
+++ b/2.html
@@ -109,7 +109,7 @@
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Profile</h6>
                 </div>
-                <img src="img/Kevin.jpg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
+                <img src="img/kevin.jpg" alt="Italian Trulli" align="middle" class="w3-circle" vspace="20" hspace="117" style="width:300px;height:300px;">
                 <div class="card-body">
                   <h1 class="h3 mb-4 text-gray-800" align="center">Kevin Huang</h1>
                   <h1 class="h3 mb-4 text-gray-800" align="center">Data Analyst</h1>
