--- a/0.html
+++ b/0.html
@@ -121,7 +121,7 @@
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
                   <a href="https://bizhackshackathon2019.slack.com/messages/UFTM3MUTU/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
                   <p>
-                    <code style= "color: #DC143C;">*Charles has received a high volume of connections lately and may take a while to respond. For an employee with similar skills, we suggest: </code>
+                    <code style= "color: #DC143C;">*Charles has received a high volume of connections lately and may take a while to respond. For an employee with similar skills, we suggest: <a href="1.html">Joel Tecson</a>. </code>
                   </p>
 
                 </div>
