Clearer mentorship tags

--- a/1.html
+++ b/1.html
@@ -132,8 +132,9 @@
                 </div>
                 <div class="card-body">
                     <div class="mb-2">
-                      <code style="font-weight:bold;color:#0092df">Proficient in</code>
-                      <code style="font-weight:bold;color:#003b64">(open to mentorship)</code>
+                        <code style="font-weight:bold;color:#0092df">Proficient in</code>
+                        <code style="font-weight:bold;color:#adadad"> | </code>
+                        <code style="font-weight:bold;color:#003b64">Open to mentorship</code>
                     </div>
                     <div class="mb-2" id="proficient"></div>
   
