Added email button

--- a/0.html
+++ b/0.html
@@ -118,6 +118,7 @@
                   <h1 class="h3 mb-4 text-gray-800" align="center">Lead iOS Developer</h1>
                   <p>Hi! My name is Charles. I've worked at BestBuy for 10 years on projects such as BestBuy.com and the BestBuy iOS App. Feel free to send me a message on Slack.</p>
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
+                  <a href="mailto:charlesqian.ubc@gmail.com" target="_blank"class="btn btn-google btn-block"><i class="fa fa-envelope"></i> Send Email</a>
                   <a href="https://bizhackshackathon2019.slack.com/messages/UFTM3MUTU/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
                   <p>
                     <code style= "color: #DC143C;">*Charles has received a high volume of connections lately and may take a while to respond. For an employee with similar skills, we suggest: <a href="1.html">Joel Tecson</a>. </code>
