--- a/3.html
+++ b/3.html
@@ -115,6 +115,7 @@
                   <h1 class="h3 mb-4 text-gray-800" align="center">Python Developer</h1>
                   <p>I specialize in development of software using the python language.</p>
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
+                  <a href="mailto:yeealistair21@gmail.com" target="_blank"class="btn btn-google btn-block"><i class="fa fa-envelope"></i> Send Email</a>
                   <a href="https://bizhackshackathon2019.slack.com/messages/UFV5US7HR/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
 
                 </div>
