--- a/1.html
+++ b/1.html
@@ -117,6 +117,7 @@
                   <h1 class="h3 mb-4 text-gray-800" align="center">Product Marketing Manager</h1>
                   <p>My name is Joel Tecson and I am one of the marketing managers here at Best Buy. My expertise revolves around implementing marketing strategies for selling our products. If you have any questions, feel free to message me on slack!  </p>
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
+                  <a href="mailto:TecsonJoelT@gmail.com" target="_blank"class="btn btn-google btn-block"><i class="fa fa-envelope"></i> Send Email</a>
                   <a href="https://bizhackshackathon2019.slack.com/messages/UFT3K068Z/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
 
                 </div>
