--- a/4.html
+++ b/4.html
@@ -115,7 +115,8 @@
                   <h1 class="h3 mb-4 text-gray-800" align="center">Database Designer</h1>
                   <p>I am one of the many designers on the team that creates, organizes and inputs different datasets into simple or complex databases. I am proficient in SQL and python. </p>
 <!--                   <p>You can create more custom buttons by adding a new color variable in the <code>_variables.scss</code> file and then using the Bootstrap button variant mixin to create a new style, as demonstrated in the <code>_buttons.scss</code> file.</p> -->
-                  <a href="https://bizhackshackathon2019.slack.com/messages/UFW2M1ACT/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
+                <a href="mailto:yeealistair21@gmail.com" target="_blank"class="btn btn-google btn-block"><i class="fa fa-envelope"></i> Send Email</a>
+                <a href="https://bizhackshackathon2019.slack.com/messages/UFW2M1ACT/" target="_blank"class="btn btn-google btn-block"><i class="fab fa-slack fa-fw"></i>Send Message on Slack</a>
 
                 </div>
               </div>
